--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,11 +119,10 @@ jobs:
             module.json                          \
             README.md                            \
             LICENSE                              \
-            templates                            \
-            scripts/                             \
+            stoplight-initiative.mjs             \
             styles/                              \
-            packs/                               \
-            language/                            \
+            assets/                               \
+            templates/                            \
             lang/
           # Don't forget to add a backslash at the end of the line for any
           # additional files or directories!
